@@ -1,3 +1,11 @@
+2019-02-27  Boruch Baum  <boruch_baum@gmx.com>
+
+	* w3m.el (w3m-select-buffer-quit): Change behavior to exit to currently
+	displayed buffer.
+	(w3m-select-buffer-delete-buffer): Change behavior to retain currently
+	displayed buffer when deleting other ones. This was a contribution by
+	Eugene Sharygin to the github repository PR#26, commit 390c4622eae.
+
 2019-02-25  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m-favicon.el (w3m-favicon-convert): bugfix: check string bounds
